--- a/pract6/Makefile
+++ b/pract6/Makefile
@@ -18,3 +18,11 @@ $(TARGET): $(OBJ)
 
 clean:
 	rm -f $(OBJ) $(TARGET)
+
+
+Añadir una opcion de traza a las opciones de ejecucion, añadir la palabra "trace" como tercer parametro opcional. 
+Queremos que la ejecucion este en modo traza, de forma que informe en todo momento lo que hace la ejecución
+En cada iteración con cada símbolo vaya mostrando el estado actual, simbolo de entrada actual, las reglas (transiciones y incluidas & transiciones) 
+y el conjunto de estados siguientes en formato {}.
+ejemplo: la cadena aa. El estado actual {0}, recibe una a y muestra sus transiciones desde estado 0 con a, incluyendo si hay & transiciones (sería en este
+ejemplo la transición (0,a)->1 y hay una & transicion con (1,&)->3), y finalmente el estado siguiente en este caso {1,3}).
